Updated Docker to ECR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ on:
     paths-ignore:
         - 'README.md'
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   integration:
     name: Continuous Integration
@@ -35,7 +39,7 @@ jobs:
             sudo apt-get install -y jq unzip
         
         - name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v1
+          uses: aws-actions/configure-aws-credentials@v2
           with:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -43,18 +47,27 @@ jobs:
 
         - name: Login to Amazon ECR
           id: login-ecr
-          uses: aws-actions/amazon-ecr-login@v1
+          uses: aws-actions/amazon-ecr-login@v2
 
         - name: Build, tag, and push image to Amazon ECR
           id: build-image
           env:
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry}}
+            ECR_REGISTRY: ${{ secrets.ECR_REGISTRY}}
             ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
             IMAGE_TAG: latest
           run: |
-            # Build a docker container and
-            # push it to ECR so that it can
-            # be deployed to ECS.
+            # Build
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+
+            # Tag
+            docker tag \
+              $ECR_REPOSITORY:$IMAGE_TAG \
+              $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+            # Push
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+            # be deployed to ECS.            
+            # echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+            # new output syntax (replaces deprecated set-output)
+            echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
